fix widths on mobile ad

--- a/assets/stylesheets/mobile-ad.css.scss
+++ b/assets/stylesheets/mobile-ad.css.scss
@@ -60,7 +60,7 @@ body {
 	margin-bottom: 5px;
 	border-right: 3px solid #fff;
 	border-left: 3px solid #fff;
-	width: 50%;
+	width: 150px;
 	&.Dem {
 		background: $widgetLightBlue;
 	}
@@ -141,7 +141,9 @@ body {
 	@include tease-link();
 	@include huffpo-body-copy;
 	margin: 5px;
-
+	max-width: 305px;
+	text-align: center;
+	margin: 0 auto;
 	a {
     color: #2e7061;
 	}
